<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<version>1.0</version>
	<groupId>io.intino.plugin</groupId>
	<artifactId>jps-plugin</artifactId>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>intino-maven</id>
			<url>https://artifactory.intino.io/artifactory/releases</url>
		</repository>
	</repositories>

	<build>
		<outputDirectory>../../out/production/jps-plugin</outputDirectory>
		<testOutputDirectory>../../out/test/jps-plugin</testOutputDirectory>
		<directory>../../out/build/jps-plugin</directory>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>../builder-constants/src</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>io.intino</groupId>
			<artifactId>builder-interface</artifactId>
			<version>2.0.0</version>
		</dependency>
	</dependencies>
</project>